# context-keep

./: .gitignore  README.md  pyproject.toml
go-service/: go.mod  go.sum  handlers.go  main.go
go-service/api/: middleware.go  middleware_test.go  mock_storage.go  server.go  server_summary_test.go  server_test.go
go-service/llm/: llm.go  mock_llm.go  mock_llm_client.go
go-service/redis/: memory.go  memory_test.go  storage.go  storage_test.go
go-service/utils/: streaming.go  streaming_test.go
python-api/src/context_keep/: cli.py  conversation_service.py  db.py
redis/: docker-compose.yml  init.sh  redisctl.sh  schema.md  seed_data.json
src/context_keep/: api.py  cli.py  connections.py  conversation_service.py  global_state.py  llm_utils.py  logger.py  main.py  redis_utils.py  setup.py  summarize.py
