[project]
name = "context-keep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]",
    "httpx>=0.28.1",
    "openai>=1.63.2",
    "pydantic>=2.10.6",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "rich-click>=1.8.6",
    "uvicorn>=0.34.0",
    "uvloop>=0.21.0",
]


[tool.setuptools]
packages = ["context-keep"]
package-dir = {"context-keep" = "src/context_keep/"}

[dependency-groups]
dev = [
    "ipython>=8.32.0",
]

# [project.scripts]
# context-keep = "src.context_keep.cli:main"
